Improve code with Java 21 features and fix thread safety issues
Co-authored-by: SelfAbandonment <193474502+SelfAbandonment@users.noreply.github.com>